--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -4,5 +4,8 @@
   "login": "Login",
   "forgot_password": "Forgot Password?",
   "new_device": "New Device",
+  "new_password": "New Password",
+  "confirm_password": "Confirm Password",
+  "send": "Send",
   "english": "English"
 }
