- create forgot password (view only) - create forgot password email (view only) - create forgot password pin (view only) - create request new device (view only)

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -1,11 +1,133 @@
 {
+  "submit": "Submit",
   "username_email": "Username/Email",
   "password": "Password",
   "login": "Login",
   "forgot_password": "Forgot Password?",
+  "forgot_password_title": "Forgot Password",
   "new_device": "New Device",
-  "new_password": "New Password",
+  "new_password": "Kata Password",
   "confirm_password": "Confirm Password",
+  "please_check_your_email_to_get_the_code": "Please check your email to get the code",
   "send": "Send",
-  "english": "English"
+  "code_verification": "Code Verification",
+  "request": "Request",
+  "request_new_device": "Request New Device",
+  "home": "Home",
+  "approval": "Approval",
+  "notification": "Notification",
+  "profile": "Profile",
+  "out": "Out",
+  "employee": "Employee",
+  "work_unit": "Work unit",
+  "start_shift_date": "Start Shift Date",
+  "shift_exchange_date": "Shift Exchange Date",
+  "save": "Save",
+  "history": "History",
+  "filter": "Filter",
+  "presence": "Presence",
+  "exchange_shift": "Exchange Shift",
+  "permission_and_leave": "Permission & Leave",
+  "team_working_hours": "Team Working Hours",
+  "in": "In",
+  "shift_exchange_history": "Shift Exchange History",
+  "year": "Year",
+  "apply": "Apply",
+  "applicant_employee": "Applicant Employee",
+  "name": "Name",
+  "shift_date": "Shift Date",
+  "substitute_employees": "Substitute Employees",
+  "status_information": "Status Information",
+  "cancel": "Cancel",
+  "shift_exchange_submission_details": "Shift Exchange Submission Detail",
+  "empty_data": "Data is empty",
+  "rejection_reason": "Rejection Reason",
+  "back": "Back",
+  "status_note": "Status Note",
+  "reject": "Reject",
+  "shift_exchange_approval_details": "Shift Exchange Approval Detail",
+  "accept": "Accept",
+  "process": "Process",
+  "leave_type": "Leave Type",
+  "status": "Status",
+  "reason": "Reason",
+  "leave_quota": "Leave Quota",
+  "date": "Date",
+  "date_range": "Date Range",
+  "start": "Start",
+  "end": "End",
+  "time": "Time",
+  "period": "Period",
+  "taken": "Taken",
+  "rest_of_leave": "Rest Of Leave",
+  "expired": "Expired",
+  "permission_leave_history": "Permission & Leave History",
+  "leave_date": "Leave Date",
+  "initial_input": "Initial Input",
+  "last_change": "Last Change",
+  "permission_leave_detail": "Permission & Leave Detail",
+  "hours": "Hours",
+  "minutes": "Minutes",
+  "ok": "Ok",
+  "title_activity_presensi_map": "Map",
+  "employee_list": "Employee List",
+  "presence_history": "Presence History",
+  "presence_in": "Presence In",
+  "presence_out": "Presence Out",
+  "exit_application": "Exit application?",
+  "submitted_on": "Submitted on",
+  "waiting": "Waiting",
+  "different_date": "Different date",
+  "same_date": "ame date",
+  "entry_time": "Entry Time",
+  "out_time": "Out Time",
+  "saved": "Saved",
+  "submitted": "Submited",
+  "rejected": "Rejected",
+  "approved": "Approved",
+  "canceled": "Cancelled",
+  "you_re_in_the_zone": "You're in the presence zone!",
+  "hurry_up_you_are_out_of_the_presence_area": "Hurry up, you are out of the presence area!",
+  "change_password": "Change Password",
+  "nip": "NIP",
+  "position": "Position",
+  "unit": "Unit",
+  "settings": "Settings",
+  "logout": "Logout",
+  "language": "Language",
+  "bahasa_indonesia": "Bahasa Indonesia",
+  "old_password": "Old Password",
+  "repeat_new_password": "Repeat New Password",
+  "english": "English",
+  "change_language": "Change Language",
+  "month": "Month",
+  "confirm_cancel_exchange": "Are you sure you want to cancel the shift exchange?",
+  "note": "Note",
+  "accept_shift_request": "Accept shift exchange?",
+  "refuse_shift_request": "Refuse shift exchange?",
+  "confirm_cancel_leave": "Are you sure you want to cancel leave / permission?",
+  "accept_leave_request": "Accept leave request?",
+  "refuse_leave_request": "Refuse leave request?",
+  "cancel_reason": "Cancel reason",
+  "upload_file": "Upload File",
+  "take_photo": "Take Photo",
+  "take_gallery": "Take From Gallery",
+  "permission_needed": "Permission Needed",
+  "percentage_npresence": "Percentage\nPresence",
+  "leave_nquota": "Leave\nQuota",
+  "email_not_valid": "Format Email Not Valid",
+  "password_not_match": "Password Not Match",
+  "choose_image": "Choose Image",
+  "max_file_size": "Max file size 512KB",
+  "info_fake_gps": "Your cellphone was detected at an inappropriate location",
+  "halo": "Hello,",
+  "request_exchange_to": "Shift exchange request to",
+  "all": "All",
+  "fill_start_date_first": "Choose start date first",
+  "use_max_info": "Max used",
+  "date_already": "Date already picked",
+  "approve": "Approve",
+  "approve_all": "Approve All",
+  "reject_all": "Reject All",
+  "your_position": "Your Position"
 }
