--- a/assets/langs/fr.json
+++ b/assets/langs/fr.json
@@ -1,11 +1,133 @@
 {
-  "username_email": "Username/Email",
-  "password": "Password",
-  "login": "Login",
-  "forgot_password": "Lupa Password?",
+  "submit": "Kirim",
+  "username_email": "Nama pengguna/Email",
+  "password": "Kata Sandi",
+  "login": "Masuk",
+  "forgot_password": "Lupa Kata Sandi?",
+  "forgot_password_title": "Lupa Kata Sandi",
   "new_device": "Perangkat Baru",
-  "new_password": "Password Baru",
-  "confirm_password": "Konfirmasi Password",
+  "new_password": "Kata Sandi Baru",
+  "confirm_password": "Konfirmasi Kata Sandi",
+  "please_check_your_email_to_get_the_code": "Silakan periksa email Anda untuk mendapatkan kode",
   "send": "Kirim",
-  "english": "English"
+  "code_verification": "Kode Verifikasi",
+  "request": "Permintaan",
+  "request_new_device": "Permintaan Perangkat Baru",
+  "home": "Beranda",
+  "approval": "Persetujuan",
+  "notification": "Notifikasi",
+  "profile": "Profil",
+  "out": "Keluar",
+  "employee": "Karyawan",
+  "work_unit": "Unit Kerja",
+  "start_shift_date": "Tanggal Shift Awal",
+  "shift_exchange_date": "Tanggal Tukar Shift",
+  "save": "Simpan",
+  "history": "Riwayat",
+  "filter": "Filter",
+  "presence": "Presensi",
+  "exchange_shift": "Pertukaran Shift",
+  "permission_and_leave": "Izin & Cuti",
+  "team_working_hours": "Jam Kerja Tim",
+  "in": "Masuk",
+  "shift_exchange_history": "Riwayat Tukar shift",
+  "year": "Tahun",
+  "apply": "Terapkan",
+  "applicant_employee": "Karyawan Pengaju",
+  "name": "Nama",
+  "shift_date": "Tanggal Shift",
+  "substitute_employees": "Karyawan Pengganti",
+  "status_information": "Informasi Status",
+  "cancel": "Batal",
+  "shift_exchange_submission_details": "Detail Pengajuan Tukar Shift",
+  "empty_data": "Data kosong",
+  "rejection_reason": "Alasan Penolakan",
+  "back": "Kembali",
+  "status_note": "Catatan Status",
+  "reject": "Tolak",
+  "shift_exchange_approval_details": "Detail Persetujuan Tukar Shift",
+  "accept": "Terima",
+  "process": "Proses",
+  "leave_type": "Jenis Cuti",
+  "status": "Status",
+  "reason": "Alasan",
+  "leave_quota": "Jatah Cuti",
+  "date": "Tanggal",
+  "date_range": "Rentang Tanggal",
+  "start": "Mulai",
+  "end": "Selesai",
+  "time": "Waktu",
+  "period": "Periode",
+  "taken": "Terambil",
+  "rest_of_leave": "Sisa Cuti",
+  "expired": "Kadaluarsa",
+  "permission_leave_history": "Riwayat Izin & Cuti",
+  "leave_date": "Tanggal Cuti",
+  "initial_input": "Awal Input",
+  "last_change": "Perubahan Terakhir",
+  "permission_leave_detail": "Detail Izin & Cuti",
+  "hours": "Jam",
+  "minutes": "Menit",
+  "ok": "Ok",
+  "title_activity_presensi_map": "Peta",
+  "employee_list": "Daftar Karyawan",
+  "presence_history": "Riwayat Presensi",
+  "presence_in": "Presensi Masuk",
+  "presence_out": "Presensi Keluar",
+  "exit_application": "Keluar aplikasi?",
+  "submitted_on": "Diajukan pada",
+  "waiting": "Menunggu",
+  "different_date": "Tanggal berbeda",
+  "same_date": "Tanggal yang sama",
+  "entry_time": "Jam Masuk",
+  "out_time": "Jam Keluar",
+  "saved": "Tersimpan",
+  "submitted": "Diajukan",
+  "rejected": "Ditolak",
+  "approved": "Disetujui",
+  "canceled": "Dibatalkan",
+  "you_re_in_the_zone": "Kamu berada di area presensi!",
+  "hurry_up_you_are_out_of_the_presence_area": "Cepat, kamu di luar area presensi!",
+  "change_password": "Ganti Kata Sandi",
+  "nip": "NIP",
+  "position": "Posisi",
+  "unit": "Unit",
+  "settings": "Pengaturan",
+  "logout": "Keluar",
+  "language": "Bahasa",
+  "bahasa_indonesia": "Bahasa Indonesia",
+  "old_password": "Kata Sandi Lama",
+  "repeat_new_password": "Ulangi Kata Sandi Baru",
+  "english": "English",
+  "change_language": "Ganti Bahasa",
+  "month": "Bulan",
+  "confirm_cancel_exchange": "Yakin ingin membatalkan tukar shift?",
+  "note": "Catatan",
+  "accept_shift_request": "Terima permintaan tukar shift?",
+  "refuse_shift_request": "Yakin ingin menolak tukar shift?",
+  "confirm_cancel_leave": "Yakin ingin membatalkan cuti / izin?",
+  "accept_leave_request": "Terima permintaan izin/cuti?",
+  "refuse_leave_request": "Yakin ingin menolak permintaan izin/cuti?",
+  "cancel_reason": "Alasan pembatalan",
+  "upload_file": "Unggah File",
+  "take_photo": "Ambil Foto",
+  "take_gallery": "Ambil Dari Galeri",
+  "permission_needed": "Izin Dibutuhkan",
+  "percentage_npresence": "Persentase\nKehadiran",
+  "leave_nquota": "Jatah\nCuti",
+  "email_not_valid": "Format Email Tidak Valid",
+  "password_not_match": "Kata Sandi Tidak Cocok",
+  "choose_image": "Pilih Gambar",
+  "max_file_size": "Ukuran maksimal file 512KB",
+  "info_fake_gps": "HP anda terdeteksi pada lokasi yang tidak sesuai",
+  "halo": "Halo,",
+  "request_exchange_to": "Permintaan tukar shift kepada",
+  "all": "Semua",
+  "fill_start_date_first": "Pilih tanggal awal dahulu",
+  "use_max_info": "Gunakan Info Maksimal",
+  "date_already": "Tanggal sudah dipilih",
+  "approve": "Setujui",
+  "approve_all": "Setujui Semua",
+  "reject_all": "Tolak Semua",
+  "your_position": "Posisi Anda"
 }
