- create profil screen (view only)

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -1,4 +1,6 @@
 {
+  "change_profile_photo": "Change Profile Photo",
+  "there_are_no_notifications_yet": "There are no notification yet.",
   "change_shift": "Change Shift",
   "password_is_empty": "Password is empty",
   "understand": "Understand",
