--- a/assets/langs/fr.json
+++ b/assets/langs/fr.json
@@ -1,4 +1,6 @@
 {
+  "change_profile_photo": "Ubah Foto Profil",
+  "there_are_no_notifications_yet": "Belum ada notifikasi.",
   "change_shift": "Tukar Shift",
   "password_is_empty": "Kata sandi masih kosong",
   "understand": "Mengerti",
