--- a/assets/langs/fr.json
+++ b/assets/langs/fr.json
@@ -1,4 +1,5 @@
 {
+  "you_are_on_the_zone": "Kamu berada dalam zona!",
   "old_password_is_empty": "Kata sandi lama masih kosong.",
   "new_password_is_empty": "Kata sandi baru masih kosong.",
   "confirm_new_password_is_empty": "Konfirmasi kata sandi baru masih kosong.",
@@ -98,7 +99,7 @@
   "approved": "Disetujui",
   "canceled": "Dibatalkan",
   "you_re_in_the_zone": "Kamu berada di area presensi!",
-  "hurry_up_you_are_out_of_the_presence_area": "Cepat, kamu di luar area presensi!",
+  "hurry_up_you_are_out_of_the_presence_area": "Cepat, Anda berada di luar area presensi!",
   "change_password": "Ubah Kata Sandi",
   "nip": "NIP",
   "position": "Posisi",
