--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -1,4 +1,5 @@
 {
+  "you_are_on_the_zone": "You are on the zone!",
   "old_password_is_empty": "Old password is empty.",
   "new_password_is_empty": "New password is empty.",
   "confirm_new_password_is_empty": "Confirmation new password is empty.",
