create tukar shift screen (view only)

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -1,4 +1,5 @@
 {
+  "employee_pegawai": "Employee",
   "presence_list": "Presence List",
   "you_are_on_the_zone": "You are on the zone!",
   "old_password_is_empty": "Old password is empty.",
