--- a/assets/langs/fr.json
+++ b/assets/langs/fr.json
@@ -1,4 +1,5 @@
 {
+  "employee_pegawai": "Pegawai",
   "presence_list": "Daftar Presensi",
   "you_are_on_the_zone": "Kamu berada dalam zona!",
   "old_password_is_empty": "Kata sandi lama masih kosong.",
