- fixing bug in location - create detail pengajuan tukar shift (view only) - crete dialog batalkan tukar shift - create list tukar shift & izin cuti

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -1,4 +1,6 @@
 {
+  "cancel2": "Cancel",
+  "no_shift_exchange_submission_yet": "No shift exchange submission yet.",
   "employee_pegawai": "Employee",
   "presence_list": "Presence List",
   "you_are_on_the_zone": "You are on the zone!",
