--- a/assets/langs/fr.json
+++ b/assets/langs/fr.json
@@ -1,4 +1,7 @@
 {
+  "cancel2": "Batalkan",
+  "no_leave_permission_submission_yet": "Belum ada pengajuan izin & cuti.",
+  "no_shift_exchange_submission_yet": "Belum ada pengajuan tukar shift.",
   "employee_pegawai": "Pegawai",
   "presence_list": "Daftar Presensi",
   "you_are_on_the_zone": "Kamu berada dalam zona!",
