update some code

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -94,7 +94,7 @@
   "submitted_on": "Submitted on",
   "waiting": "Waiting",
   "different_date": "Different date",
-  "same_date": "ame date",
+  "same_date": "Same date",
   "entry_time": "Entry Time",
   "out_time": "Out Time",
   "saved": "Saved",
